# mcp-google-gmail

./: FEATURES.md  README.md  TESTING.md  pyproject.toml
src/mcp_google_gmail/: server.py
