[project]
name = "mcp-google-gmail"
version = "0.1.3"
description = "MCP server for Gmail API — list, read, send, draft, label, and trash emails"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp>=1.8.0",
    "google-auth>=2.28.1",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.117.0",
]

[[project.authors]]
name = "MindMade D.O.O."

[project.urls]
"Homepage" = "https://github.com/MindMadeLab/mcp-gmail"
"Bug Tracker" = "https://github.com/MindMadeLab/mcp-gmail/issues"
"Repository" = "https://github.com/MindMadeLab/mcp-gmail.git"

[project.scripts]
mcp-google-gmail = "mcp_google_gmail:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_google_gmail"]
